<resources>
    <string name="app_name">Cocok.In</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="login_button">Sign-in</string>
    <string name="login_label">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="register_lable">Register</string>
    <string name="name_lable">Name:</string>
    <string name="register_button">Sign-Up</string>
    <string name="message">Produk %1$s diklik!</string>
    <string name="predict">Size Predicted: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harga">Rp. %1$d</string>
    <string name="button_gallery">Gallery</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="forgot_label">Reset Password</string>
    <string name="tv_forgot">Forgot Password?</string>
    <string name="product_label">Produk :</string>
    <string name="alamat_label">Alamat :</string>
    <string name="sub_label">Sub Total :</string>
    <string name="btn_pay">Pay Now</string>
</resources>